samples/_failures_safe/1761221076_e9ef29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3428fff.c: In function ‘main’:
./samples/SAFE/__tmp_d3428fff.c:183:13: error: expected declaration or statement at end of input
  183 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_d3428fff.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3428fff.c:183:13: error: expected declaration or statement at end of input
